--- a/pixi.toml
+++ b/pixi.toml
@@ -6,6 +6,10 @@ channels = ["conda-forge"]
 platforms = ["linux-64"]
 
 [tasks]
+make_portfolio_links = "python ./backend/src/get_portfolios_from_leaderboard.py"
+get_portfolio_values = "python ./backend/src/get_information.py"
+make_webpage = "python ./backend/src/make_webpage.py >> index.html"
+all = {depends-on = ["get_portfolio_values", "make_webpage"]}
 
 [dependencies]
 python = ">=3.13.0,<3.14"
@@ -13,3 +17,5 @@ requests = ">=2.32.3,<2.33"
 beautifulsoup4 = ">=4.12.3,<4.13"
 selenium = ">=4.25.0,<4.26"
 webdriver-manager = ">=4.0.2,<4.1"
+pandas = ">=2.2.3,<2.3"
+flask = ">=3.0.3,<3.1"
