--- a/pixi.toml
+++ b/pixi.toml
@@ -8,7 +8,7 @@ platforms = ["linux-64"]
 [tasks]
 make_portfolio_links = "python ./backend/src/get_portfolios_from_leaderboard.py"
 get_portfolio_values = "python ./backend/src/get_information.py"
-make_webpage = "python ./backend/src/make_webpage.py >> index.html"
+make_webpage = "rm index.html && python ./backend/src/make_webpage.py >> index.html"
 all = {depends-on = ["get_portfolio_values", "make_webpage"]}
 
 [dependencies]
