--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -1,5 +1,11 @@
-- uses: prefix-dev/setup-pixi@v0.8.1
-  with:
-    pixi-version: v0.33.0
-    cache: true
-- run: pixi run all
+name: Make Leaderboard Page
+run-name: Leaderboard Update
+on: [push]
+jobs:
+  Make-Leaderboard:
+  steps:
+    - uses: prefix-dev/setup-pixi@v0.8.1
+      with:
+        pixi-version: v0.33.0
+        cache: true
+    - run: pixi run all
