--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -8,5 +8,5 @@ jobs:
       - uses: prefix-dev/setup-pixi@v0.8.1
         with:
           pixi-version: v0.33.0
-          cache: true
+          cache: false
       - run: ls && pixi run all
