--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -5,7 +5,7 @@ jobs:
   Make-Leaderboard:
     runs-on: ubuntu-latest
     steps:
-      - uses: prefix-dev/setup-pixi@v0.8.1
+      # - uses: prefix-dev/setup-pixi@v0.8.1
         with:
           pixi-version: v0.33.0
           cache: false
