--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -7,3 +7,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: ls -la && echo $PWD
+      - uses: prefix-dev/setup-pixi@v0.8.0
+        with:
+          pixi-version: v0.34.0
+          cache: true
+      - run: pixi run all
