--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -11,4 +11,8 @@ jobs:
         with:
           pixi-version: v0.34.0
           cache: true
+          INVESTOPEDIA_EMAIL: ${{ secrets.INVESTOPEDIA_EMAIL }}
+          INVESTOPEDIA_PASSWORD: ${{ secrets.INVESTOPEDIA_PASSWORD }}
+          INVESTOPEDIA_NUM_LEADERBOARDS: ${{ secrets.INVESTOPEDIA_NUM_LEADERBOARDS }}
+          INVESTOPEDIA_USER_ID: ${{ secrets.INVESTOPEDIA_USER_ID }}
       - run: pixi run all
