--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -15,4 +15,4 @@ jobs:
           INVESTOPEDIA_PASSWORD: ${{ secrets.INVESTOPEDIA_PASSWORD }}
           INVESTOPEDIA_NUM_LEADERBOARDS: ${{ secrets.INVESTOPEDIA_NUM_LEADERBOARDS }}
           INVESTOPEDIA_USER_ID: ${{ secrets.INVESTOPEDIA_USER_ID }}
-      - run: echo $INVESTOPEDIA_EMAIL && INVESTOPEDIA_EMAIL=$INVESTOPEDIA_EMAIL INVESTOPEDIA_PASSWORD=$INVESTOPEDIA_PASSWORD INVESTOPEDIA_USER_ID=$INVESTOPEDIA_USER_ID pixi run all
+      - run: echo the email is $INVESTOPEDIA_EMAIL && INVESTOPEDIA_EMAIL=$INVESTOPEDIA_EMAIL INVESTOPEDIA_PASSWORD=$INVESTOPEDIA_PASSWORD INVESTOPEDIA_USER_ID=$INVESTOPEDIA_USER_ID pixi run all
