--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -3,6 +3,7 @@ run-name: Leaderboard Update
 on: [push]
 jobs:
   Make-Leaderboard:
+    environment: leaderboard-update
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
