fixed the github action

--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -5,15 +5,16 @@ jobs:
   Make-Leaderboard:
     runs-on: ubuntu-latest
     steps:
+      - name: make the leaderboard
+        env:
+          INVESTOPEDIA_EMAIL: ${{ secrets.INVESTOPEDIA_EMAIL }}
+          INVESTOPEDIA_PASSWORD: ${{ secrets.INVESTOPEDIA_PASSWORD }}
+          INVESTOPEDIA_NUM_LEADERBOARDS: ${{ secrets.INVESTOPEDIA_NUM_LEADERBOARDS }}
+          INVESTOPEDIA_USER_ID: ${{ secrets.INVESTOPEDIA_USER_ID }}
       - uses: actions/checkout@v4
       - run: ls -la && echo $PWD
       - uses: prefix-dev/setup-pixi@v0.8.0
         with:
           pixi-version: v0.34.0
           cache: true
-        env:
-          INVESTOPEDIA_EMAIL: ${{ secrets.INVESTOPEDIA_EMAIL }}
-          INVESTOPEDIA_PASSWORD: ${{ secrets.INVESTOPEDIA_PASSWORD }}
-          INVESTOPEDIA_NUM_LEADERBOARDS: ${{ secrets.INVESTOPEDIA_NUM_LEADERBOARDS }}
-          INVESTOPEDIA_USER_ID: ${{ secrets.INVESTOPEDIA_USER_ID }}
       - run: echo the email is $INVESTOPEDIA_EMAIL && INVESTOPEDIA_EMAIL=$INVESTOPEDIA_EMAIL INVESTOPEDIA_PASSWORD=$INVESTOPEDIA_PASSWORD INVESTOPEDIA_USER_ID=$INVESTOPEDIA_USER_ID pixi run all
