--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -5,15 +5,16 @@ jobs:
   Make-Leaderboard:
     runs-on: ubuntu-latest
     steps:
+      - name: Step 1: Show some basic logging information
       - uses: actions/checkout@v4
-      - name: make the leaderboard
+      - run: ls -la && echo $PWD
+
+      - name: Step 2: Make the leaderboard
         env:
           INVESTOPEDIA_EMAIL: ${{ secrets.INVESTOPEDIA_EMAIL }}
           INVESTOPEDIA_PASSWORD: ${{ secrets.INVESTOPEDIA_PASSWORD }}
           INVESTOPEDIA_NUM_LEADERBOARDS: ${{ secrets.INVESTOPEDIA_NUM_LEADERBOARDS }}
           INVESTOPEDIA_USER_ID: ${{ secrets.INVESTOPEDIA_USER_ID }}
-      - run: ls -la && echo $PWD
-      
       - uses: prefix-dev/setup-pixi@v0.8.0
         with:
           pixi-version: v0.34.0
