--- a/pixi.toml
+++ b/pixi.toml
@@ -19,3 +19,4 @@ selenium = ">=4.25.0,<4.26"
 webdriver-manager = ">=4.0.2,<4.1"
 pandas = ">=2.2.3,<2.3"
 flask = ">=3.0.3,<3.1"
+ruff = ">=0.7.1,<0.8"
