--- a/pixi.toml
+++ b/pixi.toml
@@ -22,3 +22,7 @@ flask = ">=3.0.3,<3.1"
 ruff = ">=0.7.1,<0.8"
 scipy = ">=1.14.1,<2"
 babel = ">=2.14.0,<3"
+
+[pypi-dependencies]
+playwright = ">=1.48.0, <2"
+playwright-stealth = ">=1.0.6, <2"
