--- a/pixi.toml
+++ b/pixi.toml
@@ -9,7 +9,9 @@ platforms = ["linux-64"]
 make_portfolio_links = "python ./backend/src/get_portfolios_from_leaderboard.py"
 get_portfolio_values = "python ./backend/src/get_information.py"
 make_webpage = "rm index.html && python ./backend/src/make_webpage.py >> index.html"
-all = {depends-on = ["get_portfolio_values", "make_webpage"]}
+git_push = "git add -A . &&	git commit -m 'leaderboard update' && git push origin"
+remove_temp = "rm -rf /tmp/.org.chromium.Chromium.*"
+all = {depends-on = ["get_portfolio_values", "git_push", "remove_temp"]}
 
 [dependencies]
 python = ">=3.13.0,<3.14"
