--- a/pixi.toml
+++ b/pixi.toml
@@ -28,3 +28,4 @@ babel = ">=2.14.0,<3"
 [pypi-dependencies]
 playwright-stealth = ">=1.0.6, <2"
 selenium-driverless = ">=1.9.4, <2"
+undetected-chromedriver = ">=3.5.5, <4"
