--- a/pixi.toml
+++ b/pixi.toml
@@ -29,3 +29,4 @@ babel = ">=2.14.0,<3"
 playwright-stealth = ">=1.0.6, <2"
 selenium-driverless = ">=1.9.4, <2"
 undetected-chromedriver = ">=3.5.5, <4"
+yfinance = { version = ">=0.2.48, <0.3", extras = ["nospam", "repair"] }
