--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 INVESTOPEDIA_EMAIL="YOUREMAILHERE"
 INVESTOPEDIA_PASSWORD="YOURPASSWORDHERE"
 INVESTOPEDIA_NUM_LEADERBOARDS=3
+DISCORD_BOT_TOKEN:"YOURTOKENHERE"
