--- a/pixi.toml
+++ b/pixi.toml
@@ -10,6 +10,7 @@ make_portfolio_links = "python ./backend/src/get_portfolios_from_leaderboard.py"
 get_portfolio_values = "python ./backend/src/get_information.py"
 make_webpage = "rm index.html && python ./backend/src/make_webpage.py >> index.html"
 git_push = "git add -A . &&	git commit -m 'leaderboard update' && git push origin"
+update_discord = "python ./backend/src/update_discord.py"
 remove_temp = "rm -rf /tmp/.org.chromium.Chromium.*"
 all = {depends-on = ["get_portfolio_values", "git_push", "remove_temp"]}
 
@@ -24,9 +25,12 @@ flask = ">=3.0.3,<3.1"
 ruff = ">=0.7.1,<0.8"
 scipy = ">=1.14.1,<2"
 babel = ">=2.14.0,<3"
+"discord.py" = ">=2.3.2,<3"
 
 [pypi-dependencies]
 playwright-stealth = ">=1.0.6, <2"
 selenium-driverless = ">=1.9.4, <2"
 undetected-chromedriver = ">=3.5.5, <4"
 yfinance = { version = ">=0.2.48, <0.3", extras = ["nospam", "repair"] }
+yarl = "*"
+discord-py = "*"
