UPDATE: Discord Bot

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,14 @@
 INVESTOPEDIA_EMAIL="YOUREMAILHERE"
 INVESTOPEDIA_PASSWORD="YOURPASSWORDHERE"
 INVESTOPEDIA_NUM_LEADERBOARDS=3
-DISCORD_BOT_TOKEN:"YOURTOKENHERE"
+DISCORD_BOT_TOKEN="YOURTOKENHERE"
+DISCORD_CHANNEL_ID = "YOURCHANNELIDHERE"
+
+'''
+To get your Discord Channel ID, right click on the channel you want the bot to post in and click "Copy ID"
+
+TO add the bot to your server:
+In the OAuth2 tab, grab the Client ID.
+Replace <CLIENT_ID_HERE> in the following URL and visit it in the browser to invite your bot to your new test server.
+https://discordapp.com/api/oauth2/authorize?client_id=<CLIENT_ID_HERE>&permissions=8&scope=bot
+'''
