--- a/pixi.toml
+++ b/pixi.toml
@@ -10,7 +10,7 @@ make_portfolio_links = "python ./backend/src/get_portfolios_from_leaderboard.py"
 main = "python ./backend/src/main.py"
 make_webpage = "rm index.html && python ./backend/src/make_webpage.py >> index.html"
 git_push = "git add -A . &&	git commit -m 'leaderboard update' && git push origin"
-update_discord = "python ./backend/src/update_discord.py"
+update_discord = "python ./discord/src/bot.py"
 remove_temp = "rm -rf /tmp/.org.chromium.Chromium.*"
 all = {depends-on = ["get_portfolio_values", "git_push", "remove_temp"]}
 
