--- a/pixi.toml
+++ b/pixi.toml
@@ -11,8 +11,7 @@ main = "python ./backend/src/main.py"
 make_webpage = "rm index.html && python ./backend/src/make_webpage.py >> index.html"
 git_push = "git add -A . &&	git commit -m 'leaderboard update' && git push origin"
 update_discord = "python ./discord/src/bot.py"
-remove_temp = "rm -rf /tmp/.org.chromium.Chromium.*"
-all = {depends-on = ["main", "git_push", "remove_temp"]}
+all = {depends-on = ["main", "git_push"]}
 
 [dependencies]
 python = ">=3.13.0,<3.14"
