Add user info command and leaderboard updates to Discord bot (#3)
* Add user info command and leaderboard updates to Discord bot

* Better Comments

* Add support for multiple Discord channels and stock change notifications
- arnay

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,5 @@ INVESTOPEDIA_PASSWORD="YOURPASSWORDHERE"
 INVESTOPEDIA_NUM_LEADERBOARDS=3
 
 DISCORD_BOT_TOKEN="YOURTOKENHERE"
-DISCORD_CHANNEL_ID = YOURCHANNELIDHERE
+DISCORD_CHANNEL_ID_Leaderboard = YOURCHANNELIDHERE
+DISCORD_CHANNEL_ID_Stocks = YOURCHANNELIDHERE
